Anton1.Rcheck/00install.out
* installing *source* package ‘Anton1’ ...
** libs
x86_64-apple-darwin13.4.0-clang -I/Users/Anton/anaconda3/lib/R/include -DNDEBUG  -I"/Users/Anton/anaconda3/lib/R/library/Rcpp/include" -D_FORTIFY_SOURCE=2 -mmacosx-version-min=10.9 -I/Users/Anton/anaconda3/include   -fPIC  -march=core2 -mtune=haswell -mssse3 -ftree-vectorize -fPIC -fPIE -fstack-protector-strong -O2 -pipe -I/Users/Anton/anaconda3/include -fdebug-prefix-map==/usr/local/src/conda/- -fdebug-prefix-map==/usr/local/src/conda-prefix  -c init.c -o init.o
x86_64-apple-darwin13.4.0-clang++  -I/Users/Anton/anaconda3/lib/R/include -DNDEBUG  -I"/Users/Anton/anaconda3/lib/R/library/Rcpp/include" -D_FORTIFY_SOURCE=2 -mmacosx-version-min=10.9 -I/Users/Anton/anaconda3/include   -fPIC  -march=core2 -mtune=haswell -mssse3 -ftree-vectorize -fPIC -fPIE -fstack-protector-strong -O2 -pipe -stdlib=libc++ -fvisibility-inlines-hidden  -fmessage-length=0 -I/Users/Anton/anaconda3/include -fdebug-prefix-map==/usr/local/src/conda/- -fdebug-prefix-map==/usr/local/src/conda-prefix  -c rcpp_hello_world.cpp -o rcpp_hello_world.o
rcpp_hello_world.cpp:49:10: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
    for (auto i = x.begin(); i != x.end(); ++i) {
         ^
In file included from rcpp_hello_world.cpp:2:
In file included from /Users/Anton/anaconda3/lib/R/library/Rcpp/include/Rcpp.h:27:
In file included from /Users/Anton/anaconda3/lib/R/library/Rcpp/include/RcppCommon.h:38:
In file included from /Users/Anton/anaconda3/lib/R/library/Rcpp/include/Rcpp/r/headers.h:48:
In file included from /Users/Anton/anaconda3/lib/R/library/Rcpp/include/Rcpp/platform/compiler.h:176:
In file included from /Users/Anton/anaconda3/bin/../include/c++/v1/map:442:
In file included from /Users/Anton/anaconda3/bin/../include/c++/v1/__tree:18:
/Users/Anton/anaconda3/bin/../include/c++/v1/algorithm:1925:26: error: no viable conversion from 'Rcpp::internal::const_string_proxy<16>' to 'const std::__1::basic_string<char>'
        *__result = __op(*__first);
                         ^~~~~~~~
rcpp_hello_world.cpp:62:5: note: in instantiation of function template specialization 'std::__1::transform<Rcpp::internal::Proxy_Iterator<Rcpp::internal::const_string_proxy<16> >, Rcpp::internal::Proxy_Iterator<Rcpp::internal::string_proxy<16> >, std::__1::basic_string<char> (*)(const std::__1::basic_string<char> &)>' requested here
    transform(str.begin(), str.end(), b.begin(), rp);
    ^
/Users/Anton/anaconda3/bin/../include/c++/v1/string:763:5: note: candidate constructor not viable: no known conversion from 'Rcpp::internal::const_string_proxy<16>' to 'const std::__1::basic_string<char> &' for 1st argument
    basic_string(const basic_string& __str);
    ^
/Users/Anton/anaconda3/bin/../include/c++/v1/string:778:31: note: candidate constructor not viable: no known conversion from 'Rcpp::internal::const_string_proxy<16>' to 'const value_type *' (aka 'const char *') for 1st argument
    _LIBCPP_INLINE_VISIBILITY basic_string(const value_type* __s);
                              ^
/Users/Anton/anaconda3/lib/R/library/Rcpp/include/Rcpp/vector/const_string_proxy.h:62:3: note: candidate function
                operator SEXP() const {
                ^
/Users/Anton/anaconda3/lib/R/library/Rcpp/include/Rcpp/vector/const_string_proxy.h:71:4: note: candidate function
                 operator /* const */ char*() const {
                 ^
1 warning and 1 error generated.
make: *** [rcpp_hello_world.o] Error 1
ERROR: compilation failed for package ‘Anton1’
* removing ‘/Users/Anton/PIC-10C-Final-Project/Anton1.Rcheck/Anton1’
